--- a/pages/index.module.scss
+++ b/pages/index.module.scss
@@ -1,3 +1,10 @@
+@use "../styles/colors" as color;
+@import "../styles/mixin";
+
 .container {
-  padding: 0 2rem;
+  width: 100%;
+  height: calc(100vh - 5rem - 2.5rem);
+  padding: 0 15rem;
+  background-color: color.$gray-6;
+  @include center-both;
 }
