fix: 修改footer css style

--- a/components/layout/footer/Footer.module.scss
+++ b/components/layout/footer/Footer.module.scss
@@ -8,4 +8,10 @@
   align-items: center;
   justify-content: space-between;
   background-color: color.$primary-color;
+
+  .footer_left {
+    width: 100%;
+    display: flex;
+    gap: 0.5rem;
+  }
 }
