--- a/components/layout/TimeCard.module.scss
+++ b/components/layout/TimeCard.module.scss
@@ -3,8 +3,10 @@
 
 .timeCard_container {
   width: 18rem;
-  border: 2px solid black;
   border-radius: 30px;
+  box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px,
+    rgba(0, 0, 0, 0.3) 0px 30px 60px -30px,
+    rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
   @include center-both;
   gap: 1rem;
 }
