--- a/components/auth/AuthForm.module.scss
+++ b/components/auth/AuthForm.module.scss
@@ -3,7 +3,8 @@
 
 .authForm_container {
   width: 100%;
-  height: 40%;
+  height: 50%;
+  position: relative;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -11,8 +12,25 @@
   border-radius: 30px;
   .auth {
     width: 100%;
-    .bnt_box {
-      width: 100%;
+    height: 100%;
+    @include center-both;
+    flex-direction: column;
+    gap: 1rem;
+    p {
+      @include text-styles(2rem, 500, color.$gray-1);
+    }
+    form {
+      width: 80%;
+      height: 100%;
+      display: flex;
+      align-items: center;
+      flex-direction: column;
+      gap: 0.5rem;
+      .bnt_box {
+        width: 80%;
+        position: absolute;
+        bottom: 1rem;
+      }
     }
   }
 }
