--- a/components/shared/ButtonUI.module.scss
+++ b/components/shared/ButtonUI.module.scss
@@ -2,10 +2,11 @@
 @import "../../styles/mixin";
 
 .btn__pill {
-  width: 60%;
+  width: 100%;
   height: 34px;
   margin: 0 auto;
   @include center-both;
+  @include text-styles(1rem, 700, color.$gray-10);
   border: none;
   border-radius: 50px;
   cursor: pointer;
