--- a/components/auth/AuthForm.module.scss
+++ b/components/auth/AuthForm.module.scss
@@ -4,6 +4,7 @@
 .authForm_container {
   width: 100%;
   height: 50%;
+  margin: 0 15rem;
   position: relative;
   display: flex;
   flex-direction: column;
