--- a/pages/main/index.module.scss
+++ b/pages/main/index.module.scss
@@ -4,7 +4,7 @@
 .div {
   width: 100%;
   height: calc(100vh - 5rem - 2.5rem);
-  padding: 0 15rem;
+  padding: 0.5rem;
   background-color: color.$gray-6;
   @include center-both;
 }
