feat:新增會員頁面並修改css

--- a/components/shared/InputUI.module.scss
+++ b/components/shared/InputUI.module.scss
@@ -30,7 +30,7 @@
 
   label {
     width: 30%;
-    display: block;
+    @include center-both;
     @include text-styles(1.5rem, 500, color.$gray-1);
   }
 
