--- a/components/search/SearchForm.module.scss
+++ b/components/search/SearchForm.module.scss
@@ -4,7 +4,7 @@
 .searchForm_container {
   width: 100%;
   height: 50%;
-  margin: 0 15rem;
+  margin: 0 15%;
   display: flex;
   align-items: center;
   gap: 1rem;
