--- a/components/layout/Layout.module.scss
+++ b/components/layout/Layout.module.scss
@@ -1,4 +1,5 @@
 @use "../../styles/colors" as color;
+@import "../../styles/mixin";
 
 .layout_container {
   width: 100%;
@@ -8,4 +9,11 @@
   align-items: center;
   justify-content: space-between;
   background-color: color.$primary-color;
+}
+
+.layout_children {
+  width: 100%;
+  height: calc(100vh - 5rem - 2.5rem);
+  background-color: color.$gray-6;
+  @include center-both;
 }
