--- a/components/table/MonthlySalesData.module.scss
+++ b/components/table/MonthlySalesData.module.scss
@@ -1,2 +1,23 @@
 @use "/styles/colors" as color;
 @import "/styles/mixin";
+
+.monthlySalesData_container {
+  width: 100%;
+  height: 100%;
+  margin-top: 2rem;
+  @include text-styles(1rem, 500, color.$gray-10);
+
+  .title {
+    width: 100%;
+    @include text-styles(2rem, 700, color.$gray-1);
+    text-align: center;
+    margin-bottom: 2rem;
+  }
+
+  .monthly_info {
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: 0.5rem;
+  }
+}
