--- a/components/table/MonthlySalesData.module.scss
+++ b/components/table/MonthlySalesData.module.scss
@@ -11,6 +11,14 @@
     width: 100%;
     @include text-styles(2rem, 700, color.$gray-1);
     text-align: center;
+  }
+
+  .search {
+    width: 100%;
+    @include center-both;
+    height: 4rem;
+    border-radius: 20px;
+    background-color: color.$gray-5;
     margin-bottom: 2rem;
   }
 
