--- a/pages/data/index.module.scss
+++ b/pages/data/index.module.scss
@@ -15,14 +15,16 @@
     border-bottom: 2px solid color.$gray-5;
 
     .nav_item {
-      width: 8rem;
+      width: 10rem;
       margin-right: 0.25rem;
+      text-align: center;
       border: 2px solid color.$gray-5;
       border-radius: 5px;
       border-bottom: none;
 
       &:hover {
-        border: 4px solid color.$secondary-light-color;
+        @include text-styles(1.5rem, 700, color.$secondary-light-color);
+        border: 2px solid color.$secondary-light-color;
         border-bottom: none;
       }
     }
