--- a/components/search/CtrlSearch.module.scss
+++ b/components/search/CtrlSearch.module.scss
@@ -3,20 +3,27 @@
 
 .ctrlSearch_container {
   width: 100%;
+  height: 2rem;
   text-align: center;
   @include center-both;
-  gap: 0.5rem;
+  gap: 1rem;
 
   // .title {
   //   height: 2rem;
   // }
 
   .date {
+    width: 20%;
     height: 2rem;
     .customDatePicker {
       border-radius: 30px;
       height: 2rem;
       text-align: center;
     }
+  }
+
+  .button {
+    width: 8%;
+    height: 2rem;
   }
 }
