--- a/components/shared/ButtonUI.module.scss
+++ b/components/shared/ButtonUI.module.scss
@@ -3,7 +3,7 @@
 
 .btn__pill {
   width: 100%;
-  height: 34px;
+  height: 2rem;
   margin: 0 auto;
   @include center-both;
   @include text-styles(1rem, 700, color.$gray-10);
