--- a/pages/menu-management/index.module.scss
+++ b/pages/menu-management/index.module.scss
@@ -6,6 +6,33 @@
   height: calc(100vh - 5rem - 2.5rem);
   background-color: color.$gray-6;
 
+  .addImage {
+    width: 4rem;
+    height: 4rem;
+    border-radius: 50%;
+    background-color: color.$gray-1;
+    position: fixed;
+    bottom: 4rem;
+    right: 1.5rem;
+    z-index: 10;
+    @include center-both;
+
+    &__btn {
+      width: 4rem;
+      height: 4rem;
+      border: none;
+      background-color: color.$gray-1;
+      border-radius: 50%;
+      transition: all 0.2s ease-out;
+      cursor: pointer;
+
+      &:hover {
+        transform: scale(1.1, 1.1);
+        background-color: color.$primary-color;
+      }
+    }
+  }
+
   .imgBox {
     width: 100%;
     height: 100%;
