--- a/components/layout/Burger.module.scss
+++ b/components/layout/Burger.module.scss
@@ -1,4 +1,5 @@
 @use "../../styles/colors" as color;
+@import "/styles/mixin";
 
 .flexBox {
   width: 30%;
@@ -6,6 +7,8 @@
   position: relative;
 
   .navbar_toggle {
+    width: 100%;
+    height: 82vh;
     visibility: hidden;
     position: absolute;
 
@@ -22,22 +25,30 @@
   .nav {
     position: absolute;
     top: 100%;
-    background: color.$gray-1;
-    width: 100%;
+    @include text-styles(1.5rem, 700, color.$primary-color);
+    background: color.$gray-8;
+    opacity: 0.8;
+    width: 100vw;
+    // height: calc(100vh - 5rem - 2.5rem);
     transform: scale(1, 0);
     transform-origin: top;
     transition: transform 0.3s ease-out;
 
     &_item {
       margin: 1.4rem 0;
+      padding-left: 1rem;
       opacity: 0;
+
+      &:hover {
+        background-color: color.$gray-1;
+      }
     }
   }
 
   .navbar_toggle_label {
     position: absolute;
     top: 50%;
-    left: 0;
+    left: 7.5%;
     display: flex;
 
     .hamburger {
