feat: 完成菜單修改頁面

--- a/components/shared/ButtonUI.module.scss
+++ b/components/shared/ButtonUI.module.scss
@@ -33,6 +33,23 @@
   }
 }
 
+.btn__pill__modal {
+  width: 50%;
+  height: 1.5rem;
+  margin: 0 auto;
+  @include center-both;
+  @include text-styles(0.75rem, 500, color.$gray-10);
+  border: none;
+  border-radius: 50px;
+  cursor: pointer;
+
+  &:hover {
+    background-color: color.$primary-color;
+    color: color.$assistant-gray-color;
+    transform: scale(1.1, 1.1);
+  }
+}
+
 .btn__link {
   margin-top: 0.5rem;
   @include center-both;
