--- a/components/layout/footer/Footer.module.scss
+++ b/components/layout/footer/Footer.module.scss
@@ -4,14 +4,31 @@
   width: 100%;
   height: 2.5rem;
   padding: 0.25rem 2rem;
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
   background-color: color.$primary-color;
 
+  .footer_right {
+    display: none;
+  }
+
   .footer_left {
-    width: 100%;
+    display: none;
+  }
+}
+
+@media screen and (min-width: 768px) {
+  .footer_container {
     display: flex;
-    gap: 0.5rem;
+    align-items: center;
+    justify-content: space-between;
+
+    .footer_left {
+      width: 100%;
+      display: flex;
+      gap: 0.5rem;
+    }
+
+    .footer_right {
+      display: block;
+    }
   }
 }
