--- a/components/card/ListCard.module.scss
+++ b/components/card/ListCard.module.scss
@@ -2,10 +2,10 @@
 @import "../../styles/mixin";
 
 .listCard_container {
-  width: 60%;
+  width: 100%;
   height: 3rem;
   border-radius: 30px;
-  background-color: color.$brand-light-color;
+  background-color: color.$assistant-purple-color;
   box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px,
     rgba(0, 0, 0, 0.3) 0px 30px 60px -30px,
     rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
@@ -16,7 +16,7 @@
     justify-content: flex-start;
     align-items: center;
     gap: 2rem;
-    @include text-styles(1.25rem, 500, color.$gray-9);
+    @include text-styles(1.25rem, 700, color.$gray-3);
   }
   .ctrl {
     width: 30%;
