--- a/components/modal/AddEmployeeModal.module.scss
+++ b/components/modal/AddEmployeeModal.module.scss
@@ -1,15 +1,29 @@
 @use "/styles/colors" as color;
 @import "/styles/mixin";
 
-.addNewEmployee_container {
+.backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  z-index: 10;
+  background: rgba(0, 0, 0, 0.75);
+}
+
+.addEmployeeModal_container {
   width: 80%;
-  height: 100%;
-  display: flex;
-  flex-direction: column;
-  border: 2px solid color.$gray-10;
+  height: 80%;
+  padding: 1rem;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  border: 1px solid color.$gray-8;
   border-radius: 30px;
-  @include text-styles(1rem, 500, color.$gray-10);
-  background-color: color.$brand-light-color;
+  background-color: color.$gray-7;
+  z-index: 100;
+  overflow: hidden;
 
   .form {
     width: 100%;
