--- a/components/modal/AddEmployeeModal.module.scss
+++ b/components/modal/AddEmployeeModal.module.scss
@@ -12,7 +12,7 @@
 }
 
 .addEmployeeModal_container {
-  width: 80%;
+  width: 70%;
   height: 80%;
   padding: 1rem;
   position: fixed;
@@ -32,17 +32,18 @@
 
     .info_data {
       width: 100%;
+      height: 70%;
       @include center-both;
       flex-direction: column;
       gap: 0.5rem;
     }
 
     .info_ctrl {
+      height: 30%;
       margin-left: 58%;
       display: flex;
       justify-content: flex-end;
-      align-items: center;
-      gap: 0.25rem;
+      align-items: flex-end;
     }
   }
 }
