--- a/components/shared/InputUI.module.scss
+++ b/components/shared/InputUI.module.scss
@@ -45,3 +45,27 @@
     text-align: left;
   }
 }
+
+.input_modal {
+  width: 100%;
+  margin-bottom: 0.5rem;
+  display: flex;
+
+  label {
+    width: 100%;
+    display: block;
+    @include text-styles(1rem, 500, color.$gray-1);
+    margin-bottom: 0.5rem;
+  }
+
+  input {
+    padding: 0.25rem;
+    width: 100%;
+    border: 1px solid color.$gray-1;
+    border-radius: 4px;
+    background-color: color.$gray-3;
+    font: inherit;
+    color: color.$brand-color;
+    text-align: left;
+  }
+}
