--- a/components/card/InfoCard.module.scss
+++ b/components/card/InfoCard.module.scss
@@ -7,7 +7,8 @@
   gap: 2rem;
 
   .infoCard_fist {
-    width: 20%;
+    width: 30%;
+    height: 2rem;
     @include center-both;
     box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px,
       rgba(0, 0, 0, 0.3) 0px 30px 60px -30px,
@@ -17,7 +18,8 @@
   }
 
   .infoCard_last {
-    width: 30%;
+    width: 70%;
+    height: 2rem;
     @include center-both;
     box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
     border-radius: 15px;
