--- a/components/card/ChangeInfoCard.module.scss
+++ b/components/card/ChangeInfoCard.module.scss
@@ -8,6 +8,7 @@
 
   .changeInfo_fist {
     width: 100%;
+    height: 2rem;
     @include center-both;
     box-shadow: rgba(50, 50, 93, 0.25) 0px 50px 100px -20px,
       rgba(0, 0, 0, 0.3) 0px 30px 60px -30px,
@@ -18,10 +19,11 @@
 
   .changeInfo_last {
     width: 100%;
-    height: 1.5rem;
+    height: 2rem;
     text-align: center;
     box-shadow: rgba(0, 0, 0, 0.24) 0px 3px 8px;
     border-radius: 15px;
     background-color: color.$gray-3;
+    @include text-styles(1rem, 500, color.$gray-10);
   }
 }
