--- a/components/modal/employee/AddEmployeeModal.module.scss
+++ b/components/modal/employee/AddEmployeeModal.module.scss
@@ -21,7 +21,7 @@
   transform: translate(-50%, -50%);
   border: 1px solid color.$gray-8;
   border-radius: 30px;
-  background-color: color.$assistant-purple-color;
+  background-color: color.$brand-color;
   z-index: 100;
   overflow: hidden;
 
