--- a/components/shared/ButtonUI.module.scss
+++ b/components/shared/ButtonUI.module.scss
@@ -50,6 +50,22 @@
   }
 }
 
+.btn__checkIn__pill {
+  width: 100%;
+  height: 3rem;
+  margin: 0 auto;
+  @include center-both;
+  @include text-styles(1rem, 700, color.$gray-10);
+  border: none;
+  border-radius: 50px;
+  cursor: pointer;
+
+  &:hover {
+    background-color: color.$primary-color;
+    color: color.$assistant-gray-color;
+  }
+}
+
 .btn__link {
   margin-top: 0.5rem;
   @include center-both;
