--- a/components/card/AttendanceCard.module.scss
+++ b/components/card/AttendanceCard.module.scss
@@ -3,7 +3,7 @@
 
 .attendanceCard_container {
   width: 100%;
-  height: 3rem;
+  height: 4rem;
   margin-bottom: 0.25rem;
   border-radius: 30px;
   background-color: color.$brand-light-color;
@@ -15,6 +15,7 @@
 
   .info {
     width: 60%;
+    height: 3rem;
     margin: 0 1rem;
     border-radius: 10px;
     background-color: color.$gray-1;
@@ -22,6 +23,11 @@
       rgba(0, 0, 0, 0.3) 0px 30px 60px -30px,
       rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
     @include center-both;
+    flex-direction: column;
     @include text-styles(1rem, 500, color.$gray-8);
+
+    span {
+      color: color.$gray-11;
+    }
   }
 }
