--- a/components/modal/checkIn/AttendanceModal.module.scss
+++ b/components/modal/checkIn/AttendanceModal.module.scss
@@ -1,10 +1,28 @@
-@use "../../../styles/colors" as color;
-@import "../../../styles/_mixin.scss";
+@use "/styles/colors" as color;
+@import "/styles/mixin";
+
+.backdrop {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  z-index: 10;
+  background: rgba(0, 0, 0, 0.75);
+}
 
 .attendance_container {
-  width: 100%;
-  height: calc(100vh - 5rem - 2.5rem);
-  background-color: color.$gray-6;
+  width: 90%;
+  height: 70%;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  border: 1px solid color.$gray-8;
+  border-radius: 30px;
+  background-color: color.$brand-light-color;
+  z-index: 100;
+  overflow: hidden;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
@@ -24,6 +42,7 @@
 
   .attendance {
     width: 75%;
+    height: 70%;
     margin-bottom: 0.5rem;
     overflow-y: scroll;
   }
