--- a/components/card/MenuCard.module.scss
+++ b/components/card/MenuCard.module.scss
@@ -2,6 +2,7 @@
 @import "/styles/mixin";
 
 .menuCard_container {
+  position: relative;
   width: 12rem;
   height: 16rem;
   border: 1px solid color.$gray-8;
@@ -31,4 +32,17 @@
       gap: 0.25rem;
     }
   }
+}
+
+.isActive {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.5);
+  @include center-both;
+  @include text-styles(1rem, 500, color.$gray-2);
+  z-index: 10;
+  border-radius: 30px;
 }
