--- a/components/card/MenuCard.module.scss
+++ b/components/card/MenuCard.module.scss
@@ -42,6 +42,8 @@
   height: 100%;
   background: rgba(0, 0, 0, 0.5);
   @include center-both;
+  flex-direction: column;
+  gap: 2rem;
   @include text-styles(1rem, 500, color.$gray-2);
   z-index: 10;
   border-radius: 30px;
