--- a/components/modal/MenuIdModal.module.scss
+++ b/components/modal/MenuIdModal.module.scss
@@ -1,10 +1,22 @@
 @use "/styles/colors" as color;
 @import "/styles/mixin";
 
-.menuIdModal_container {
-  width: 80%;
-  padding: 1rem;
+.backdrop {
   position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  z-index: 10;
+  background: rgba(0, 0, 0, 0.75);
+}
+
+.menuIdModal_container {
+  width: 60%;
+  height: 70%;
+  padding: 1rem 2rem;
+  position: fixed;
+  top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
   border: 1px solid color.$gray-8;
@@ -15,23 +27,21 @@
 
   .infoBox {
     width: 100%;
-    display: flex;
-    align-items: flex-start;
-    justify-content: center;
-    gap: 0.5rem;
+    @include center-both;
+    flex-direction: column;
+    gap: 2rem;
     .image {
       width: 100%;
+      @include center-both;
       border-radius: 30px;
 
-      &_img {
-        width: 100%;
-        height: 70%;
+      .container_img {
         border-radius: 30px;
       }
     }
 
     .info {
-      width: 100%;
+      width: 80%;
       height: 10rem;
       display: flex;
       justify-content: flex-start;
