--- a/components/card/OrderMenuCard.module.scss
+++ b/components/card/OrderMenuCard.module.scss
@@ -2,6 +2,7 @@
 @import "/styles/mixin";
 
 .orderMenuCard_container {
+  position: relative;
   width: 100%;
   min-width: 10rem;
   max-width: 17rem;
@@ -14,25 +15,30 @@
     rgba(0, 0, 0, 0.3) 0px 30px 60px -30px,
     rgba(10, 37, 64, 0.35) 0px -2px 6px 0px inset;
 
+  .isActive {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background: rgba(0, 0, 0, 0.5);
+    @include center-both;
+    flex-direction: column;
+    gap: 2rem;
+    @include text-styles(1rem, 500, color.$gray-2);
+    z-index: 10;
+    border-radius: 30px;
+  }
+
   .imgBox {
     width: 100%;
     height: 100%;
-    border-radius: 30px;
-    overflow: hidden;
 
     &_img {
       width: 100%;
       height: 100%;
       border-radius: 30px;
       overflow: hidden;
-    }
-
-    .alreadyOrder_img {
-      background-color: color.$error-color;
-    }
-
-    .notOrder {
-      background-color: color.$brand-light-color;
     }
   }
 
