--- a/components/main/Main.module.scss
+++ b/components/main/Main.module.scss
@@ -6,7 +6,7 @@
   height: 100%;
   display: flex;
   flex-wrap: wrap;
-  justify-content: space-around;
+  justify-content: flex-start;
   align-items: center;
   gap: 0.5rem;
 }
