--- a/components/modal/main/OrderModal.module.scss
+++ b/components/modal/main/OrderModal.module.scss
@@ -25,6 +25,33 @@
   z-index: 100;
   // overflow: hidden;
 
+  .addImage {
+    width: 4rem;
+    height: 4rem;
+    border-radius: 50%;
+    background-color: color.$gray-1;
+    position: fixed;
+    bottom: 1rem;
+    right: 3rem;
+    z-index: 10;
+    @include center-both;
+
+    &__btn {
+      width: 4rem;
+      height: 4rem;
+      border: none;
+      background-color: color.$gray-1;
+      border-radius: 50%;
+      transition: all 0.2s ease-out;
+      cursor: pointer;
+
+      &:hover {
+        transform: scale(1.1, 1.1);
+        background-color: color.$primary-color;
+      }
+    }
+  }
+
   .menuBox {
     width: 100%;
     height: 100%;
