feat:完成結帳功能

--- a/components/modal/main/CheckoutModal.module.scss
+++ b/components/modal/main/CheckoutModal.module.scss
@@ -53,5 +53,13 @@
 
   .btnBox {
     width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: flex-end;
+
+    .totalAmount {
+      width: 70%;
+      margin-bottom: 3rem;
+    }
   }
 }
