--- a/components/loading/Loading.module.scss
+++ b/components/loading/Loading.module.scss
@@ -2,9 +2,14 @@
 @import "/styles/mixin";
 
 .loading {
-  background-color: color.$brand-light-color;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  z-index: 10;
+  background: rgba(0, 0, 0, 0.75);
   @include center-both;
-  height: 100%;
 
   .loading_spinner {
     width: 40px;
